--- a/app/views/conferences/list.rhtml
+++ b/app/views/conferences/list.rhtml
@@ -1,7 +1,7 @@
 <%= start_table %>
   <%= table_head_row %>
-    <th>Conference</th>
-    <th>Dates</th>
+    <th><%= 'Conference'.t %></th>
+    <th><%= 'Dates'.t %></th>
   <%= end_table_row %>
 <% @conferences.each do |conf| %>
   <%= table_row %>
