--- a/app/views/conferences/show.rhtml
+++ b/app/views/conferences/show.rhtml
@@ -1,8 +1,8 @@
-<h1><%=h @conference.name %></h1>
-<p><%=h @conference.descr %></p>
+<h1><%= @conference.name %></h1>
+<p><%= @conference.descr %></p>
 
-<p><%=h @conference.begins %> - <%=h @conference.finishes %></p>
+<p><%= @conference.begins %> - <%= @conference.finishes %></p>
 
 <% if !@conference.homepage.blank? %>
-  <p><%= link_to 'Web site'.t, @conference.homepage %></p>
+  <p><%= link_to 'Web site', @conference.homepage %></p>
 <% end %>
