--- a/app/views/people/login.rhtml
+++ b/app/views/people/login.rhtml
@@ -1,8 +1,8 @@
 <div id="loginreq">
 <% form_tag :action => 'validate' do %>
-<p><%= 'User name'.t %>: <input type="text" size="20" name="login"></p>
+<p><%= 'User name' %>: <input type="text" size="20" name="login"></p>
 
-<p><%= 'Password'.t %>: <input type="password" size="20" name="passwd"></p>
-<p><input type="submit" name="ok" value="<%= 'Log in'.t %>"></p>
+<p><%= 'Password' %>: <input type="password" size="20" name="passwd"></p>
+<p><input type="submit" name="ok" value="<%= 'Log in' %>"></p>
 <% end %>
 </div>
