- Some minor logic corrections - hey, I'm just starting to use   this gettext thingy...

--- a/app/views/admin/people/show.rhtml
+++ b/app/views/admin/people/show.rhtml
@@ -1,2 +1,3 @@
 <h1><%= _("Attendee %d's personal data") % @person.id %></h1>
-<%= render :partial => 'form', :locals => {:action => 'show'} %>
+<%= render :partial => 'form', 
+           :locals => {:action => 'show', :submit => _('Save changes')} %>
