--- a/app/views/admin/people/list.rhtml
+++ b/app/views/admin/people/list.rhtml
@@ -1,13 +1,13 @@
 <h1><%= _"Attendee administration" %></h1>
-<p><%= _"%d total registered attendees " % @people.size %> </p>
-<p><%= link_to _'Register new', :action => 'new' %></p>
+<p><%= _("%d total registered attendees ") % @people.size %> </p>
+<p><%= link_to _('Register new'), :action => 'new' %></p>
 <%= start_table %>
   <%= table_head_row %>
-    <th><%= link_to _'ID', :sort_by => 'id' %></th>
-    <th><%= link_to _'First name', :sort_by => 'firstname' %></th>
-    <th><%= link_to _'Family name', :sort_by => 'famname' %></th>
-    <th><%= link_to _'Attendee type', :sort_by => 'person_type_id' %></th>
-    <th><%= link_to _'Last login at', :sort_by => 'last_login_at' %></th>
+    <th><%= link_to _('ID'), :sort_by => 'id' %></th>
+    <th><%= link_to _('First name'), :sort_by => 'firstname' %></th>
+    <th><%= link_to _('Family name'), :sort_by => 'famname' %></th>
+    <th><%= link_to _('Attendee type'), :sort_by => 'person_type_id' %></th>
+    <th><%= link_to _('Last login at'), :sort_by => 'last_login_at' %></th>
     <th></th>
   <%= end_table_row %>
   <% @people.each do |person| %>
@@ -17,7 +17,7 @@
     <td><%= link_to h(person.famname), :action => 'show', :id => person %></td>
     <td><%= h(person.person_type.name) %></td>
     <td><%= h(person.last_login_at) %></td>
-    <td><%= link_to_if(@user != person, _'Delete',
+    <td><%= link_to_if(@user != person, _('Delete'),
 		       {:action => 'destroy', :id => person},
 		       {:confirm => _("Are you sure you want to " +
 				      "permanently delete %s?") % person.name,
