--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+      xml:lang="<%= Locale.get %>" lang="<%= Locale.get %>">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <%  headers["Content-Type"] = "text/html; charset=utf-8" %>
@@ -7,7 +8,8 @@
 		        '/stylesheets/comas.css') %>
 
 <title><%= @title %></title>
-<script type="text/javascript" src="http://lafa.iiec.unam.mx/css_iiec/x.js"></script>
+<script type="text/javascript"
+	src="http://lafa.iiec.unam.mx/css_iiec/x.js"></script> 
 <script type="text/javascript">
 function adjustDimensions() {
     var menu_height, main_height, max_height, menu_width, total_width;
