--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" 
-      xml:lang="<%= Locale.get %>" lang="<%= Locale.get %>">
+  <% if defined? Locale %>
+    xml:lang="<%= Locale.get %>" lang="<%= Locale.get %>"
+  <% end %> >
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <%  headers["Content-Type"] = "text/html; charset=utf-8" %>
