--- a/app/views/people_adm/by_task.rhtml
+++ b/app/views/people_adm/by_task.rhtml
@@ -1,6 +1,6 @@
 <h1><%= _"Registered people with administrative tasks" %></h1>
 <% @tasks.sort_by {|t| t.name}.each do |task| %>
-<h3><%= _(task.name) %></h3>
+<h3><%= _(task.qualified_name) %></h3>
 <ul>
   <% task.people.sort_by {|p| p.name}.map do |person| %>
   <li><%= link_to(h(person.name), :action => :show, :id => person) %></li>
