--- a/app/views/conferences/list.rhtml
+++ b/app/views/conferences/list.rhtml
@@ -1,2 +1,13 @@
 <h1><%= _'Upcoming conferences' %></h1>
+<% if @user.nil? %>
+<p class="note">
+  <%= _('To register for any of the conferences shown, please %s or %s') %
+        [ link_to(_('create a new account'), 
+                  :controller => 'people', :action => 'new'),
+          link_to(_('log in to your account'), 
+                  :controller => 'people', :action => 'login') ]
+      %></p>
+<% end %>
+<%= pagination_header @conferences %>
+<%= will_paginate @conferences %>
 <%= render :partial => 'list', :locals => {:confs => @conferences } %>
