- Better control the default conferences list - Move the conference registration actions from people to conferences   controller; modularized it a bit as well - Enforce the accepts_registrations? check in the controller (but a   person_adm is still capable of changing it!) - Validate the timeslots happen during their conference - Document the conference model - Translations, translations... - Modified several multiline gettext strings to use '+' instead of   '<<', as updatepo understands it better :-/

--- a/app/views/conferences/list.rhtml
+++ b/app/views/conferences/list.rhtml
@@ -11,3 +11,10 @@
 <%= pagination_header @conferences %>
 <%= will_paginate @conferences %>
 <%= render :partial => 'list', :locals => {:confs => @conferences } %>
+<div class="note">
+  <% if session[:conf_list_include_past] %>
+    <%= link_to _('Hide past conferences'), :hide_old => 1 %>
+  <% else %>
+    <%= link_to _('Show also past conferences'), :show_old => 1 %>
+  <% end %>
+</div>
