--- a/app/views/attendance_adm/choose_session.rhtml
+++ b/app/views/attendance_adm/choose_session.rhtml
@@ -2,10 +2,10 @@
 
 <% if @shown == :all %>
 <h3><%=_('%d total registered timeslots') %  @tslots.total_entries %></h3>
-<p><%= link_to _("Show only today's timeslots"),
+<p><%= link_to _("Show only current timeslots"),
                :show_all => false %></p>
 <% else %>
-<h3><%=_('%d timeslots for today') % @tslots.total_entries %></h3>
+<h3><%=_('%d currently active timeslots') % @tslots.total_entries %></h3>
 <p><%= link_to _("Show all registered timeslots"),
                :show_all => true %></p>
 <% end %>
