--- a/app/views/conferences_adm/show.rhtml
+++ b/app/views/conferences_adm/show.rhtml
@@ -1,3 +1,5 @@
 <h1><%= _("Edit conference data") %></h1>
 <%= render :partial => 'form', 
            :locals => {:action => 'show', :submit => _('Save changes')} %>
+<p><%= link_to _('Edit timeslots for this conference'),
+               :action => 'timeslots', :id => @conference %></p>
