--- a/app/views/conferences_adm/people_list.rhtml
+++ b/app/views/conferences_adm/people_list.rhtml
@@ -1,5 +1,5 @@
 <h1><%= _('People registered for <em>%s</em>') % @conference.name %></h1>
-<%= page_entries_info @people %>
+<%= pagination_header @people %>
 <%= will_paginate @people %>
 <%= start_table %>
   <%= table_head_row %>
