--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -6,77 +6,23 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <%  headers["Content-Type"] = "text/html; charset=utf-8" %>
-<%= stylesheet_link_tag('http://lafa.iiec.unam.mx/css_iiec/style.css',
-		        'comas.css',
+<%= stylesheet_link_tag('comas.css',
 			'calendar.css') %>
 
 <title><%= @title %></title>
 <%= javascript_include_tag 'calendar' %>
-<script type="text/javascript"
-	src="http://lafa.iiec.unam.mx/css_iiec/x.js"></script> 
-<script type="text/javascript">
-function adjustDimensions() {
-    var menu_height, main_height, max_height, menu_width, total_width;
-    // The menu gets its witdth from the stylesheet; principal-menu
-    // grows to all of the available space menu leaves
-    menu_width = xWidth("menu");
-    total_width = xWidth("encabezado") || xWidth("encabezadologin");
-    xWidth("principal-menu", total_width - menu_width)
-    // Menu and principal-menu columns get the same height
-    menu_height = xHeight("menu");
-    main_height = xHeight("principal-menu");
-    max_height = Math.max(menu_height, main_height);
-    xHeight("menu", max_height);
-    xHeight("principal-menu", max_height);
-}
-window.onload = function() {
-  xAddEventListener(window, "resize", adjustDimensions, false);
-  adjustDimensions();
-}
-</script>
 </head>
 <body>
-
-<% if ! @user.nil? %>
-<div id="encabezadologin">
-  <div id="iniciomenulogin"><%= @title %></div>
-</div>
-<% else %>
-<div id="encabezado">
-  <div id="iniciomenu"><%= @title %></div>
-</div>
-<% end %>
-
-<div id="menu">
-<%= @menu %>
-</div>
-
-<div id="principal-menu">
-<% if ! @user.nil? %>
-  <div id="login">
-    <%=h @user.login %> (<%=h @user.name %>)
-      - <%= link_to _('Log out'), :controller => '/people', :action => 'logout' %>
+<div class="global">
+  <div id="header"><%= @title %></div>
+  <div id="menu"><%= @menu %></div>
+  <div id="main">
+    <%= login_data %>
+    <%= show_flash %>
+    <div id="contents"><%= yield %></div>
   </div>
-<% end %>
-
-  <div id="contenido">
-
-<% [:error, :warning, :notice].each do |level|
-   if flash[level] %>
-    <div id="<%= level %>">
-      <%= flash[level].map {|elem| elem}.join "<br />" %>
-      <% flash.discard(level) %>
-    </div>
-<% end
-end %>
-
-<%= yield %>
-
-  </div>
-  <div id="pie">
-    <div id="fincontenido">
-    </div>
-  </div>
+</div>
+<div id="footer"><%= @footer %></div>
 </div>
 </body>
 </html>
