Jump to the login field upon page load

--- a/app/views/people/login.rhtml
+++ b/app/views/people/login.rhtml
@@ -1,8 +1,11 @@
 <div id="loginreq">
-<% form_tag :action => 'validate' do %>
+<% form_tag url_for(:action => 'validate'), :id=>'login' do %>
 <p><%= _'User name' %>: <input type="text" size="20" name="login"></p>
 
 <p><%= _'Password' %>: <input type="password" size="20" name="passwd"></p>
 <p><input type="submit" name="ok" value="<%= _'Log in' %>"></p>
 <% end %>
 </div>
+<script language="JavaScript"> 
+  document.getElementById("login").elements[0].focus()
+</script>
