--- a/app/views/proposals/by_author.html.erb
+++ b/app/views/proposals/by_author.html.erb
@@ -1,11 +1,14 @@
-<h1><%= _('Proposals for %s') % @conference.name %></h1>
+<h1><%= _('Proposals submitted by author') %></h1>
+
+<h3><%= _('%d proposals have been submitted by %s') % 
+	  [@props.size, @author.name] %></h3>
 
 <%= pagination_header @props %>
 <%= will_paginate @props %>
 <%= start_table %>
   <%= table_head_row %>
     <th><%= _'Title' %></th>
-    <th><%= _'Authors' %></th>
+    <th><%= _'Conference' %></th>
     <th><%= _'Proposal type' %></th>
     <th><%= _'Proposal status' %></th>
   <%= end_table_row %>
@@ -13,7 +16,8 @@
     <%= table_row %>
       <td><%= link_to(prop.title, :controller => 'proposals',
 	              :action => 'show', :id => prop)%></td>
-      <td><%= authors_list_for_proposal(prop).join('<br/>') %></td>
+      <td><%= link_to(prop.conference.name, :controller => 'conferences',
+	              :action => 'show', :id => prop.conference.id) %></td>
       <td><%=h prop.prop_type.name %></td>
       <td><%=h prop.prop_status.name %></td>
     <%= end_table_row %>
