--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -5,4 +5,4 @@
                        :action => 'create',
                        :choose_confs => true,
                        :confs => @confs, 
-                       :submit_label => _'Register proposal' }) %>
+                       :submit_label => _('Register proposal') }) %>
